Fixed delete icon on smaller screens

--- a/public/aufgaben/main.css
+++ b/public/aufgaben/main.css
@@ -571,6 +571,9 @@ body {
         font-size: 0.8rem;
         padding: 10px 20px;
     }
+    .device:hover {
+        padding: 9px 19px;
+    }
     .deleteButton {
         height: 100%;
         width: 55px;
@@ -625,6 +628,9 @@ body {
         margin-top: 0.6rem;
         font-size: 0.7rem;
         padding: 10px 15px;
+    }
+    .device:hover {
+        padding: 9px 14px;
     }
     .text {
         margin-top: 10px;
@@ -724,6 +730,9 @@ body {
         font-size: 0.5rem;
         padding: 10px 15px;
     }
+    .device:hover {
+        padding: 9px 14px;
+    }
     .text {
         margin-top: 10px;
         margin-left: 0px;
@@ -768,16 +777,24 @@ body {
         font-size: 0.6rem;
         padding: 12px 12px;
     }
-    .deleteButton {
-        height: 100%;
+    .deleteButton{
         width: 30px;
-        padding: 10.5px 0px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
     }
-    .deleteButton span {
-        font-size: 15px;
+    .trash {
+        width: 13px;
+        height: 12px;
+    }
+    .trash span {
+        height: 3px;
+        top: -5px;
+        left: -1px;
+        right: -1px;
+    }
+    .trash span::after {
+        width: 7px;
+        height: 4px;
+        top: -2px;
+        left: 4px;
     }
     .addButton {
         margin-top: 1rem;
@@ -816,6 +833,9 @@ body {
         margin-top: 0.6rem;
         font-size: 0.5rem;
         padding: 10px 15px;
+    }
+    .device:hover {
+        padding: 9px 14px;
     }
     .text {
         margin-top: 4px;
